--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: JTD_TEST_2
-description: A test site for a Jeykll site using the Just the Docs theme!
+title: FATE in the BAWG
+description: A website to track the progress of our FATE game in the BAWG
 theme: just-the-docs
 
-url: https://jackdesmarais.github.io/JTD_TEST_2
+url: https://jackdesmarais.github.io/FATE_in_the_BAWG/
 
 aux_links:
-  Template Repository: https://github.com/jackdesmarais/JTD_TEST_2
+  Template Repository: https://github.com/jackdesmarais/FATE_in_the_BAWG
