--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,11 @@ url: https://jackdesmarais.github.io/FATE_in_the_BAWG/
 
 aux_links:
   Template Repository: https://github.com/jackdesmarais/FATE_in_the_BAWG
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page."
+gh_edit_repository: "https://github.com/jackdesmarais/FATE_in_the_BAWG" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "edit" # "tree" or "edit" if you want the user to jump into the editor immediately
