--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ collections:
   subsystems:
     permalink: "/:collection/:path.html"
     output: true
+  spiritual_realms:
+    permalink: "/:collection/:path.html"
+    output: true
 
 just_the_docs:
   # Define which collections are used in just-the-docs
@@ -68,6 +71,11 @@ just_the_docs:
       search_exclude: false
     subsystems:
       name: Subsystems
+      nav_exclude: false
+      nav_fold: true
+      search_exclude: false
+    spiritual_realms:
+      name: Spiritual Realms
       nav_exclude: false
       nav_fold: true
       search_exclude: false
